tests/invalid/syntax/type_missing_eq.nyx
// INVALID: type alias missing = 
// Expected parse error: = required in type statement
type Foo i32
